feat: add catalogue filters
